--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1820,10 +1820,12 @@ nav .logo{
 		}
 		
 .notice-box{
-	width:200px;
 	height:200px;
 	}
 	
+.counter-box{
+	width:200px;
+	height:200px;}
 	
 	
 } 
